@@ -1,5 +1,9 @@
 2021-02-24  Allen D. Ball  <ball@hcf.dev>
 
+	* src/main/java/galyleo/shell/magic/AbstractScriptEngineMagic.java,
+	src/main/java/galyleo/shell/magic/Javascript.java:
+	Initial writing.
+
 	* src/main/java/galyleo/dependency/Resolver.java:
 	Added working dependency resolution.
 
